--- a/style.css
+++ b/style.css
@@ -24,14 +24,17 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: 2s;
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
+    transition: 2s;
 }
 
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 2s;
 }
 .ex-10-icon {
     font-size: 60px;
@@ -84,6 +87,25 @@
         border-radius: 50%;
     }
 }
+@keyframes spin1 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(359deg);
+    }
+}
+@keyframes spin2 {
+    0% {
+        transform: rotate(0deg);
+    }
+    90% {
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
 
 .ex-1-square:hover {
     animation: color-change;
@@ -102,4 +124,42 @@
 
 .ex-4-square:hover {
     background-color: rgba(0, 0, 0, 0);
+}
+
+.ex-5-square:hover {
+    transform: scale(2);
+}
+
+.ex-5-square:active {
+    transform: scale(0.5);
+}
+
+.ex-6-img:hover {
+    filter: grayscale(100%);
+}
+
+.ex-7-img:hover {
+    filter: grayscale(100%) brightness(100%);
+}
+
+.ex-8-img:hover {
+    filter: saturate(0.7) grayscale(0.5);
+    border-radius: 25px;
+}
+
+.ex-9-img:hover {
+    filter: saturate(0.7) grayscale(0.5);
+    border-radius: 40px;
+    transform: scale(1.5);
+}
+
+.ex-10-icon {
+    animation: spin1;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.ex-11-icon {
+    animation: spin2;
 }
