--- a/style.css
+++ b/style.css
@@ -71,22 +71,25 @@
     width: 60px;
     height: 20px;
 }
-
+/*EX 7*/
 @keyframes color-change {
     100% {
         background-color: red;
     }
 }
+/*EX 8*/
 @keyframes grow-width {
     100% {
         width: 100%;
     }
 }
+/*EX 9*/
 @keyframes make-circle {
     100% {
         border-radius: 50%;
     }
 }
+/*EX 10*/
 @keyframes spin1 {
     0% {
         transform: rotate(0deg);
@@ -95,6 +98,7 @@
         transform: rotate(359deg);
     }
 }
+/*EX 11*/
 @keyframes spin2 {
     0% {
         transform: rotate(0deg);
@@ -102,8 +106,81 @@
     90% {
         transform: rotate(270deg);
     }
-    100%{
-        transform: rotate(0deg);
+}
+/*EX 12*/
+@keyframes moveTopWhite {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: calc(100% - 60px);
+    }
+    100% {
+        left: 10%;
+    }
+}
+@keyframes moveBottomWhite {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: calc(100% - 60px);
+    }
+    100% {
+        right: 20%;
+    }
+}
+/*EX 13*/
+@keyframes moveBottomWhiteCompletely {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+}
+@keyframes moveTopWhiteCompletely {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
     }
 }
 
@@ -162,4 +239,18 @@
 
 .ex-11-icon {
     animation: spin2;
+}
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: moveTopWhite 2s linear infinite;
+}
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: moveBottomWhite 2s linear infinite;
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: moveBottomWhiteCompletely 2s linear infinite;
+}
+.ex-13-button:hover .ex-13-top-white {
+    animation: moveTopWhiteCompletely 2s linear infinite;
 }
